# tiny-ram-halo2

./: .gitignore  Cargo.nix  Cargo.toml  NOTICE  README.md  flake.nix  rust-toolchain  rust-toolchain.toml
proptest-regressions/: trace.txt
proptest-regressions/circuits/: and.txt  cmpa.txt  logic.txt  shift.txt  signed_sum.txt  sum.txt  xor.txt
proptest-regressions/circuits/tables/: even_bits.txt  exe.txt
proptest-regressions/gadgets/: and.txt  cmpa.txt  greater_than.txt
proptest-regressions/gadgets/tables/: even_bits.txt
src/: assign.rs  instructions.rs  lib.rs  main.rs  test_utils.rs  trace.rs
src/circuits/: and.rs  changed.rs  cmpa.rs  flag1.rs  flag2.rs  flag3.rs  flag4.rs  logic.rs  mod.rs  modulo.rs  prod.rs  shift.rs  sprod.rs  ssum.rs  sum.rs  xor.rs
src/circuits/tables/: aux.rs  even_bits.rs  exe.rs  mem.rs  mod.rs  pow.rs  prog.rs  signed.rs
src/circuits/tables/aux/: out.rs  out_table.rs
src/circuits/tables/exe/: temp_vars.rs
src/gadgets/: and.rs  cmpa.rs  greater_than.rs  mod.rs
src/gadgets/tables/: aux.rs  even_bits.rs  exe.rs  instructions.rs  mem.rs  mod.rs  prog.rs
src/instructions/: opcode.rs
