[package]
name = "tiny-ram-halo2"
version = "0.1.0"
edition = "2021"

[profile.test]
# opt-level = 3
debug-assertions = true
# lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pasta_curves = "0.3.0"
rand_core = { version = "0.6", features = [ "getrandom" ] }
plotters = { version = "0.3.0" }
proptest = "1.0.0"

[dependencies.halo2_proofs]
git = "https://github.com/zcash/halo2.git"
rev = "72ff677776504c288f4927a6ce8d3c273ebd588d"
features = ["dev-graph"]
