[package]
name = "tiny-ram-halo2"
version = "0.1.0"
edition = "2021"

[profile.test]
# opt-level = 3
debug-assertions = true
# lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pasta_curves = "0.3.0"
rand_core = { version = "0.6", features = [ "getrandom" ] }
plotters = { version = "0.3.0" }
proptest = "1.0.0"
lazy_static = "1.4.0"

[dependencies.halo2_proofs]
version = "0.2.0"
features = ["dev-graph"]
